# backend/docs/swagger.json
@@ -244,37 +244,6 @@
                 }
             }
         },
-        "/logs/score": {
-            "get": {
-                "description": "Get score logs of every player.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "logs"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/models.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/handlers.ScoreLogsResponse"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    }
-                }
-            }
-        },
         "/maps/{mapid}/discussions": {
             "get": {
                 "description": "Get map discussions with specified map id.",
@@ -1214,6 +1183,68 @@
                 }
             }
         },
+        "/stats/scores": {
+            "get": {
+                "description": "Get score logs of every player.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "stats"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/handlers.ScoresResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/stats/timeline": {
+            "get": {
+                "description": "Get the history of portal count world records over time.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "stats"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/handlers.TimelineResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/token": {
             "get": {
                 "description": "Gets the token cookie value from the user.",
@@ -1768,18 +1799,7 @@
                 }
             }
         },
-        "handlers.ScoreLogsResponse": {
-            "type": "object",
-            "properties": {
-                "scores": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/handlers.ScoreLogsResponseDetails"
-                    }
-                }
-            }
-        },
-        "handlers.ScoreLogsResponseDetails": {
+        "handlers.ScoresDetails": {
             "type": "object",
             "properties": {
                 "date": {
@@ -1802,6 +1822,17 @@
                 },
                 "user": {
                     "$ref": "#/definitions/models.UserShort"
+                }
+            }
+        },
+        "handlers.ScoresResponse": {
+            "type": "object",
+            "properties": {
+                "scores": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handlers.ScoresDetails"
+                    }
                 }
             }
         },
@@ -1851,6 +1882,34 @@
                 },
                 "user_name": {
                     "type": "string"
+                }
+            }
+        },
+        "handlers.TimelinePoint": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "date": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.TimelineResponse": {
+            "type": "object",
+            "properties": {
+                "timeline_multiplayer": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handlers.TimelinePoint"
+                    }
+                },
+                "timeline_singleplayer": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handlers.TimelinePoint"
+                    }
                 }
             }
         },
@@ -1938,6 +1997,9 @@
             "properties": {
                 "chapter_name": {
                     "type": "string"
+                },
+                "difficulty": {
+                    "type": "integer"
                 },
                 "game_name": {
                     "type": "string"
